--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -3,7 +3,7 @@
 # for more information, please refer to the documentation of jekyll-socials plugin: https://github.com/george-gca/jekyll-socials
 cv_pdf: /assets/pdf/example_pdf.pdf # path to your CV PDF file
 email: marhiar@gmail.com # your email address
-inspirehep_id: 1010907 # Inspire HEP author ID
+#inspirehep_id: 1010907 # Inspire HEP author ID
 #rss_icon: false # comment this line to hide the RSS icon
 scholar_userid: YjtMrYcAAAAJ # your Google Scholar ID
 linkedin_username: marhiar # your LinkedIn username
